# Nnemo

./: .gitignore  Makefile  README.md  docker-compose.yml  install.sh  start.sh
.devcontainer/: README.md  devcontainer.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: analytics.py  auth.py  clusters.py  contracts.py  marketplace.py  nodes.py  payments.py  schemas.py  websocket.py
backend/app/api/v1/: __init__.py  auth.py  model_profiles.py  nodes.py  placement.py  public.py  telemetry.py
backend/app/auth/: __init__.py  dependencies.py  jwt_handler.py
backend/app/core/: config.py  deps.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  model_profile.py  models.py  node.py  organization.py  placement_decision.py  placement_request.py  telemetry.py  user.py
backend/app/payments/: __init__.py  crypto_handler.py  stripe_handler.py
backend/app/schemas/: __init__.py  auth.py  model_profile.py  node.py  placement.py  telemetry.py  user.py
backend/app/services/: __init__.py  auth_service.py  matching.py  model_profile_service.py  node_service.py  placement_service.py  telemetry_service.py  user_service.py
backend/app/tests/: __init__.py  test_auth_flow.py  test_node_registration.py  test_placement_logic.py
backend/app/websocket/: __init__.py  connection_manager.py
backend/scripts/: init_db.py
frontend/: Dockerfile.dev  package.json  tsconfig.json
infra/: env.example.backend  (+1 more)
(+34 files in other folders)
